integrations/wasm/rust/crates/angular-ts/tests/ui/inject_requires_named_field.rs
use angular_ts::component;

pub struct Store;

#[component(selector = "bad-component", template = "")]
pub struct BadComponent(#[inject] Option<Store>);

fn main() {}
